<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.educationapplication.viewmodels.LoginViewModel" />
        <variable
            name="onLogin"
            type="com.example.educationapplication.viewmodels.LoginEvent" />
        <variable
            name="onSignup"
            type="com.example.educationapplication.viewmodels.SignUpEvent" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signupText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        bind:context=".util.views.LoginView">

        <View
            android:id="@+id/login_white_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#FEFEFE"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="WADDLE"
            android:textColor="#F07402"
            android:textSize="60dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duck_login"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="116dp"
            android:layout_height="52dp"
            android:backgroundTint="#ED8C33"
            android:onClick="@{()->onLogin.run()}"
            android:text="Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.764"
            bind:changeToHomepage="Entered to Homepage!" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="115dp"
            android:layout_height="48dp"
            android:backgroundTint="#FFFFFF"
            android:onClick="@{()->onSignup.run()}"
            android:text="SIGN UP NOW"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="250dp"
            android:layout_height="49dp"
            android:fontFamily="sans-serif"
            android:text="@={viewModel.errorMessage}"
            android:textColor="#F07402"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duck_login"
            app:layout_constraintVertical_bias="0.932" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.568" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.657" />

        <ImageView
            android:id="@+id/duck_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/waddle_duck" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/duckgif_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#F9F9F9"
            android:src="@drawable/waddle_duck"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>