...
        android:layout_height="match_parent"
        android:orientation="vertical"
        bind:context=".util.views.Fragment.DashboardFragment">


        <TextView
            android:id="@+id/dashboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:layout_weight="1"
            android:text="Dashboard"
            android:textColor="#FF6822"
...
